# simple-monitor-in-cpp-srivathsa-sarvothama

./: .gitignore  CMakeLists.txt  README.md  checker.cpp  monitor.cpp  monitor.h  test-monitor.cpp
.github/workflows/: main-workflow.yml
